--- a/signuppage.html
+++ b/signuppage.html
@@ -6,9 +6,11 @@
 <div class="login-page">
   <div class="form">
     <form class="login-form">
+      <input type="text" placeholder="Input Referral Code Here"/>
       <input type="text" placeholder="Username"/>
       <input type="password" placeholder="password"/>
-      <button>Login</button>
+      <input type="email" placeholder="Email"/>
+      <button>Apply Code </button>
       <p class="message">No Code? Ask to be Referred!<a href="testindex.html"> Go Back to Homepage</a></p>
     </form>
   </div>
