--- a/testIndex logged in.html
+++ b/testIndex logged in.html
@@ -70,8 +70,8 @@ on gas should switch to electric vehicles (EV). We host databases on the cloud a
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
-                  <th>#</th>
-                  <th>Header</th>
+                  <th>ID</th>
+                  <th></th>
                   <th>Header</th>
                   <th>Header</th>
                   <th>Header</th>
@@ -218,14 +218,15 @@ on gas should switch to electric vehicles (EV). We host databases on the cloud a
       var myChart = new Chart(ctx, {
         type: 'line',
         data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+          labels: ["1 Week", "2 Weeks", "3 Weeks", "4 Weeks"],
           datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
+            label: 'Total gas spent on a weekly basis',
+            data: [125, 250, 375, 500],
             lineTension: 0,
             backgroundColor: 'transparent',
-            borderColor: '#007bff',
+            borderColor: '#ff0000',
             borderWidth: 4,
-            pointBackgroundColor: '#007bff'
+            pointBackgroundColor: '#ff0000'
           }]
         },
         options: {
